Kubernetes/Vaultwarden/yamls/vaultwarden-deploy.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: vaultwarden
  labels:
    name: vaultwarden
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
    app.kubernetes.io/name: vaultwarden
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: quay.io/vaultwarden/server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: vaultwarden-data
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
---
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
apiVersion: v1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: vaultwarden
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vaultwarden-https-redirect
  namespace: vaultwarden
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vaultwarden-security
  namespace: vaultwarden
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-websecure
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vaultwarden.domain.com`)
      services:
        - name: vaultwarden
          port: 80
          serversTransport: vaultwarden-transport
      middlewares:
        - name: vaultwarden-security
  tls:
    secretName: vaultwarden-domain-com
    options:
      name: vaultwarden-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-web
  namespace: vaultwarden
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`vaultwarden.domain.com`)
      services:
        - name: vaultwarden
          port: 80
      middlewares:
        - name: vaultwarden-https-redirect
